--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ main .app .app-data .workout {
   overflow: hidden;
   color: aliceblue;
   margin-top: 10px;
+  cursor: pointer;
 }
 main .app .app-data .workout .info {
   display: grid;
