--- a/styles.scss
+++ b/styles.scss
@@ -43,11 +43,7 @@ main{
             }
             .input-exercise{
                 width: 100%;
-                // height: 0px;
                 transition: all 250ms ease-in-out;
-                &:hover{
-                    // height: 99px;.
-                }
                 form{
                     display: grid;
                     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -93,8 +89,7 @@ main{
                 overflow:hidden;
                 color:aliceblue;
                 margin-top: 10px;
-                // border-left: 5px solid #4ac46c;
-                // height: 0px;
+                cursor: pointer;
                 .info{
                     display: grid;
                     grid-template-columns: repeat(4, 1fr);
@@ -191,8 +186,3 @@ main{
         display: block;
     }
 }
-// .color{
-//     width: 100px;
-//     height: 100%;
-//     background: red;
-// }
